# gornr

./: Makefile  README.md  go.mod  gohello.h  main  main.cpp  main.go  t.h
LitleleprikonDelay/: CMakeLists.txt
LitleleprikonDelay/goprocess/: Makefile  main.go
LitleleprikonDelay/lib/goprocess/: goprocess.h
LitleleprikonDelay/resource/: editor.uidesc
LitleleprikonDelay/source/: Makefile  cids.h  controller.cpp  controller.h  entry.cpp  goprocess.h  processor.cpp  processor.h  version.h
LitleleprikonOverdrive/goprocess/: main.go
support/: index.html  index.js
